# shift

./: conanfile.py
src/: CMakeLists.txt  ZmianaAgregacja.cpp  ZmianaAgregacja.h  ZmianaFabryka.cpp  ZmianaFabryka.h  ZmianaIdKlas.cpp  ZmianaInterfejs.h  ZmianaLiniowa.cpp  ZmianaLiniowa.h  ZmianaLiniowaIlosciowa.cpp  ZmianaLiniowaIlosciowa.h  ZmianaParametr.cpp  ZmianaParametr.h  ZmianaPotegowa.cpp  ZmianaPotegowa.h  ZmianaPotegowaAlt.cpp  ZmianaPotegowaAlt.h  ZmianaStaleNapisy.h  ZmianaStaleXml.h  ZmianaSymbol.h
test_package/: conanfile.py  example.cpp
